# Algorithms-and-AI-project---Gomoku

./: README.md  pyproject.toml
Dokumentaatio/: Toteutusdokumentti.md  Viikkoraportti 3.mkd  Viikkoraportti 4.mkd
