[project]
name = "beefgomoku"
version = "0.1.0"
description = ""
authors = [
    {name = "A5Beef",email = "edvintran@gmail.com"}
]
readme = "README.md"
requires-python = "==3.8.10"
dependencies = [
    "numpy"
]

[dependency-groups]
dev = [
    "pytest (<8.0)",
    "pylint",
    "pyinstaller",
    "pywin32"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
